--- a/requirements_pix2sgg.txt
+++ b/requirements_pix2sgg.txt
@@ -17,16 +17,16 @@ blinker==1.6.2
 braceexpand==0.1.7
 brotlipy==0.7.0
 cachetools==5.3.1
-certifi @ file:///croot/certifi_1690232220950/work/certifi
-cffi @ file:///croot/cffi_1670423208954/work
+certifi
+cffi 
 cfgv==3.4.0
-charset-normalizer @ file:///tmp/build/80754af9/charset-normalizer_1630003229654/work
+charset-normalizer 
 click==8.1.7
 cloudpickle==2.2.1
 comm==0.1.4
 contexttimer==0.3.3
 contourpy==1.1.0
-cryptography @ file:///croot/cryptography_1689373676338/work
+cryptography 
 cycler==0.11.0
 debugpy==1.6.7.post1
 decorator==5.1.1
@@ -46,11 +46,11 @@ fsspec==2023.6.0
 ftfy==6.1.1
 gitdb==4.0.10
 GitPython==3.1.32
-gmpy2 @ file:///tmp/build/80754af9/gmpy2_1645455532332/work
+gmpy2 
 h5py==3.9.0
 huggingface-hub==0.16.4
 identify==2.5.27
-idna @ file:///croot/idna_1666125576474/work
+idna
 imageio==2.31.1
 imantics==0.1.12
 importlib-metadata==6.8.0
@@ -63,7 +63,7 @@ ipython-genutils==0.2.0
 ipywidgets==8.1.0
 isoduration==20.11.0
 jedi==0.19.0
-Jinja2 @ file:///croot/jinja2_1666908132255/work
+Jinja2 
 joblib==1.3.2
 json5==0.9.14
 jsonpointer==2.4
