--- a/lavis/projects/blip/eval/rel_det_places365_pgsg_eval.yaml
+++ b/lavis/projects/blip/eval/rel_det_places365_pgsg_eval.yaml
@@ -10,7 +10,7 @@ model:
   max_txt_len: 512 # test time
   # max_objects: 50
   dump_pred: False
-  dump_dir: "/hadatasets/artur.barros/preds_places8"
+  dump_dir: "./predicted_graphs"
 
   seg_len: 32
 
@@ -21,19 +21,19 @@ model:
   top_k_ent_label_num: 1
   top_k_predicate_label_num: 3
 
-  finetuned: "/home/artur.barros/Pix2Grp/weights/vg_sgg.pth"
+  finetuned: "weights/vg_sgg.pth"
 
   num_coord_bin: 640
   image_size: 384
   # image_size: 640
-  cate_dict_url: "/home/artur.barros/Pix2Grp/Pix2Grp_CVPR2024/cache/vg/vg_motif_anno/categories_dict.json"
+  cate_dict_url: "cache/categories_dict.json"
 
   post_proc_cfg:
     ent_ampl_scale: 5.0
     rel_ampl_scale: 2.0
 
 datasets:
-  places365_rel_detection_eval:          # ← the builder you registered
+  places365_rel_detection_eval:         
     yaml_config: defaults                
     build_info:
       annotations:
@@ -44,7 +44,6 @@ datasets:
         storage: "/home/artur.barros/Pix2Grp/Pix2Grp_CVPR2024/cache/places365/images"
       image_lists:
         storage: "/home/artur.barros/Pix2Grp/Pix2Grp_CVPR2024/cache/places365/places8.csv"
-      # VG-150 vocabulary so Pix2Grp’s post-proc keeps working
       categories:
         storage: "/home/artur.barros/Pix2Grp/Pix2Grp_CVPR2024/cache/vg/vg_motif_anno/categories_dict.json"
 
@@ -73,7 +72,7 @@ run:
   generation_mode: sampling # sampling search
 
   seed: 42
-  output_dir: "output/BLIP/results_ARTUR"
+  output_dir: "output/BLIP/results_RCPD"
 
   evaluate: True
   # test_splits: ["val"]
@@ -86,9 +85,9 @@ run:
   distributed: True
 
   zeroshot_cfg:
-    zs_triplets: '/home/artur.barros/Pix2Grp/Pix2Grp_CVPR2024/cache/vg/vg_motif_anno/zeroshot_triplet.pytorch'
+    zs_triplets: 'cache/vg_motif_anno/zeroshot_triplet.pytorch'
     # zs_predicate: [ 1,  8, 14, 13,  6,  9,  7,  2,  3, 12,  0, 10, 11,  4,  5]
     # zs_predicate: [0, 3, 5, 9, 11, 12, 14, 16,  20, 23, 27, 31, 35, 36, 42,]
     zs_predicate: [0, 1, 2, 3, 4, 5, 6, 8, 9, 10, 11, 12, 14, 16, 18, 20, 22, 23, 25, 26, 27, 31, 34, 35, 36, 40, 41, 42, 44, 48]
 
-  cate_dict_url: "/home/artur.barros/Pix2Grp/Pix2Grp_CVPR2024/cache/vg/vg_motif_anno/categories_dict.json"
+  cate_dict_url: "cache/categories_dict.json"
